--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,7 +1,7 @@
 
 /* Add your profile image here */
 .Photo{
-    background-image: url('C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Single.png');
+    background-image: url('https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Single.png');
 }
 /* Projects Photo */
 .project1{
