--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -5,15 +5,15 @@
 }
 /* Projects Photo */
 .project1{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Clustering.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Clustering.png");
     cursor: none;
 }
 .project2{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Classificatio.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Classificatio.png");
     cursor: none;
 }
 .project3{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\NLP-Project-Ideas.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/NLP-Project-Ideas.png");
     cursor: none;
 }
 .project4{
@@ -25,30 +25,30 @@
     cursor: none;
 }
 .project6{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Tableau.jpg");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Tableau-Logo.png");
     cursor: none;
 }
 
 .project7{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Project manahement.jpg");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Project%20manahement.jpg");
     cursor: none;
 }
 
 .project8{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Deep Learning.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Deep%20Learning.png");
     cursor: none;
 }
 /* M
 /* Miscelaneous Activities photo */
 .misc1{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Skills.jpg");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Skills.jpg");
     cursor: none;
 }
 .misc2{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Education.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Education.png");
     cursor: none;
 }
 .misc3{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\Experience.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Experience.png");
     cursor: none;
 }
