--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -17,11 +17,11 @@
     cursor: none;
 }
 .project4{
-    background-image: url("C:\Users\Shubham Srivastava\Downloads\shubham0211portfolio\src\styles\STatic.png");
+    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/public/STatic.png");
     cursor: none;
 }
 .project5{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Research+Papers');
+    background-image: url('https://github.com/shubhamsrivastava951/shubham/blob/master/public/STatic.png');
     cursor: none;
 }
 .project6{
