--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro');
+@import url('https://github.com/shubhamsrivastava951/shubham/tree/master/public');
 :root {
     --primary-color:  #e96224;
     --hover-color:  #ff6600;
