--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -5,50 +5,50 @@
 }
 /* Projects Photo */
 .project1{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Clustering.png");
+    background-image: url("Clustering.png");
     cursor: none;
 }
 .project2{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Classificatio.png");
+    background-image: url("Classificatio.png");
     cursor: none;
 }
 .project3{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/NLP-Project-Ideas.png");
+    background-image: url("NLP-Project-Ideas.png");
     cursor: none;
 }
 .project4{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/public/STatic.png");
+    background-image: url("STatic.png");
     cursor: none;
 }
 .project5{
-    background-image: url('https://github.com/shubhamsrivastava951/shubham/blob/master/public/STatic.png');
+    background-image: url('STatic.png');
     cursor: none;
 }
 .project6{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Tableau-Logo.png");
+    background-image: url("Tableau-Logo.png");
     cursor: none;
 }
 
 .project7{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Project%20manahement.jpg");
+    background-image: url("Project%20manahement.jpg");
     cursor: none;
 }
 
 .project8{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Deep%20Learning.png");
+    background-image: url("Deep%20Learning.png");
     cursor: none;
 }
 /* M
 /* Miscelaneous Activities photo */
 .misc1{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Skills.jpg");
+    background-image: url("Skills.jpg");
     cursor: none;
 }
 .misc2{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Education.png");
+    background-image: url("Education.png");
     cursor: none;
 }
 .misc3{
-    background-image: url("https://github.com/shubhamsrivastava951/shubham/blob/master/src/styles/Experience.png");
+    background-image: url("Experience.png");
     cursor: none;
 }
