--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -6,6 +6,7 @@
 /* Projects Photo */
 .project1{
     background-image: url("Clustering.png");
+    background-size: 400px 600px;
     cursor: none;
 }
 .project2{
