--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -15,6 +15,7 @@
 }
 .project3{
     background-image: url("NLP-Project-Ideas.png");
+    background-size: 300px 400px;
     cursor: none;
 }
 .project4{
