--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -5,7 +5,7 @@
 }
 /* Projects Photo */
 .project1{
-    background-image: url("Movies.png");
+    background-image: url("Movies.jpg");
     background-size: 400px 600px;
     cursor: none;
 }
