--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -37,12 +37,12 @@
 }
 
 .project8{
-    background-image: url("Cotton Disease.png");
+    background-image: url("Cotton Disease.jpg");
     background-size: 300px 400px;
     cursor: none;
 }
 .project9{
-    background-image: url("Health Care.png");
+    background-image: url("Health Care.jpg");
     background-size: 300px 400px;
     cursor: none;
 }
