--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -37,7 +37,7 @@
 }
 
 .project8{
-    background-image: url("Cotton Disease.jpg");
+    background-image: url("Cotton Diseae.png");
     background-size: 300px 400px;
     cursor: none;
 }
@@ -47,7 +47,7 @@
     cursor: none;
 }
 .project10{
-    background-image: url("Project%20manahement.jpg");
+    background-image: url("Project manahement.jpg");
     background-size: 300px 400px;
     cursor: none;
 }
