--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -47,7 +47,7 @@
     cursor: none;
 }
 .project10{
-    background-image: url("Tableau.jpg");
+    background-image: url("Tableau-Logo.png");
     background-size: 300px 400px;
     cursor: none;
 }
